[package]
name = "rusty-cli"
version = "0.1.1"
edition = "2021"
authors = ["Michael Martin <flrgh@protonmail.com>"]
license = "BSD-2-Clause"
repository = "https://github.com/flrgh/rusty-cli"
description = "resty-cli, rewritten"

# not publishing to crates.io (yet), but this needs to be set to true
# in order for cargo-dist to run
publish = true


[dependencies]
shlex = "1.3.0"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
libc = "0.2"
nix = { version = "0.28.0", features = ["signal", "process"] }
thiserror = "1.0.59"

[profile.release]
opt-level = "z"
strip = true
codegen-units = 1
lto = true

# cargo-dist
[profile.dist]
inherits = "release"
lto = "thin"

# cargo-dist
[workspace.metadata.dist]
cargo-dist-version = "0.14.0"
ci = ["github"]
installers = ["shell"]
unix-archive = ".tar.gz"
targets = [
	"x86_64-unknown-linux-gnu",
	"x86_64-unknown-linux-musl",
	"aarch64-unknown-linux-gnu",
	"aarch64-unknown-linux-musl",
	"x86_64-apple-darwin",
	"aarch64-apple-darwin",
]

# cargo-dist buildjet runners for arm64
[workspace.metadata.dist.github-custom-runners]
aarch64-unknown-linux-gnu = "buildjet-8vcpu-ubuntu-2204-arm"
aarch64-unknown-linux-musl = "buildjet-8vcpu-ubuntu-2204-arm"

# cargo-release
[workspace.metadata.release]
sign-commit = true
sign-tag = true
push = true
tag = true
consolidate-commits = true
pre-release-commit-message = "release: {{version}}"
tag-message = "release: {{version}}"

[build-dependencies]
cargo-dist = "0.14.0"
cargo-release = "0.25.7"
