[package]
name = "rusty-cli"
version = "0.5.0"
edition = "2021"
authors = ["Michael Martin <flrgh@protonmail.com>"]
license = "BSD-2-Clause"
repository = "https://github.com/flrgh/rusty-cli"
description = "resty-cli, rewritten"
build = "build.rs"

# not publishing to crates.io (yet), but this needs to be set to true
# in order for cargo-dist to run
publish = true


[dependencies]
shlex = "1.3.0"
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
libc = "0.2"
nix = { version = "0.31.1", features = ["signal", "process", "fs", "feature"] }
thiserror = "2.0.17"

[profile.release]
opt-level = "z"
strip = true
codegen-units = 1
lto = true

# cargo-dist
[profile.dist]
inherits = "release"
lto = "thin"

[workspace]
members = [
    # internal / testing only
    "test-utils",
    "test-utils/macros"
]

# cargo-release
[workspace.metadata.release]
sign-commit = true
sign-tag = true
push = true
tag = true
consolidate-commits = true
pre-release-commit-message = "release: {{version}}"
tag-message = "release: {{version}}"

[dev-dependencies]
test-utils = { path = "./test-utils" }
test-binary = "3.0.2"
#cargo-release = "0.25.8"
